# Baa

./: .editorconfig  .gitignore  AST_Parser_Development_Progress__2025-07-04T16-35-09.md  CHANGELOG.md  CMakeLists.txt  CMakeLists_test.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  LICENSE  README.md  build.ninja  debug_preprocessor_error.c  lexertodo.md  simple_var_decl_test.c  test_enhanced_error_context.c  test_enhanced_error_demo.c  test_var_decl_node.c  مثال.باء
cmake/: BaaCompilerSettings.cmake
docs/: AST.md  AST_ROADMAP.md  AST_STRUCTURE.md  CMAKE_ROADMAP.md  CURRENT_STATUS_SUMMARY.md  ENHANCED_ERROR_HANDLING_ROADMAP.md  ERROR_SYSTEM_MIGRATION_GUIDE.md  LEXER_ROADMAP.md  LEXER_STRUCTURE.md  LLVM_CODEGEN.md  LLVM_CODEGEN_ROADMAP.md  PARSER.md  PARSER_ROADMAP.md  PARSER_STRUCTURE.md  PREPROCESSOR_ROADMAP.md  SEMANTIC_ANALYSIS.md  SEMANTIC_ANALYSIS_ROADMAP.md  Test_Suite.md  Test_Suite_Roadmap.md  UNIFIED_ERROR_SYSTEM_ARCHITECTURE.md  arabic_support.md  architecture.md  ast.md  c_comparison.md  components.md  development.md  language.md  lexer.md  migration_analysis.md  preprocessor.md  project_structure.md  roadmap.md
examples/: hello.baa
include/baa/: ast.h  codegen.h  compiler.h  control_flow.h  lexer.h  parser.h  utils.h
include/baa/analysis/: flow_analysis.h  flow_errors.h
include/baa/ast/: ast.h  ast_printer.h  ast_types.h  expressions.h  literals.h  scope.h  statements.h  visitor.h
include/baa/codegen/: codegen.h  llvm_codegen.h
include/baa/control_flow/: control_flow.h  control_flow_errors.h
include/baa/diagnostics/: diagnostics.h
include/baa/lexer/: lexer.h  lexer_char_utils.h  lexer_internal.h  token_scanners.h
include/baa/operators/: operators.h
include/baa/parser/: expression_parser.h  parser.h  parser_helper.h  tokens.h
include/baa/preprocessor/: preprocessor.h
include/baa/types/: types.h
include/baa/utils/: errors.h  utils.h
src/: CMakeLists.txt  compiler.c  main.c
src/analysis/: CMakeLists.txt  flow_analysis.c  flow_errors.c
src/ast/: CMakeLists.txt  ast.c  ast_builder.c  ast_declarations.c  ast_declarations.h  ast_expressions.c  ast_expressions.h  ast_node.c  ast_printer.c  ast_program.c  ast_program.h  ast_statements.c  ast_statements.h  ast_types.c  ast_types.h  expressions.c  function.c  literals.c  statements.c
src/codegen/: CMakeLists.txt  codegen.c  llvm_codegen.c  llvm_stub.c
src/control_flow/: CMakeLists.txt  control_flow.c  control_flow_errors.c
src/include/: baa_errors.h
src/lexer/: CMakeLists.txt  lexer.c  lexer_char_utils.c  lexer_internal.h  number_parser.c  token_scanners.c
src/operators/: CMakeLists.txt  operators.c  operators.h
src/parser/: CMakeLists.txt  control_flow_parser.c  declaration_parser.c  declaration_parser.h  error_handling.c  expression_parser.c  expression_parser.h  function_parser.c  parser.c  parser_helper.c  parser_internal.h  parser_utils.h  statement_parser.c  statement_parser.h  tokens.h  type_parser.c  type_parser.h
src/preprocessor/: CMakeLists.txt  preprocessor.c  preprocessor.h  preprocessor_conditionals.c  preprocessor_core.c  preprocessor_directives.c  preprocessor_expansion.c  preprocessor_expr_eval.c  preprocessor_internal.h  preprocessor_line_processing.c  preprocessor_macros.c  preprocessor_utils.c
src/types/: CMakeLists.txt  types.c  types.h
src/utils/: CMakeLists.txt  utils.c
tests/: CMakeLists.txt  llvm_codegen_test.c  llvm_test.c  test_ast_builder.c  test_control_flow.c  test_lexer.c  test_operators.c  test_types.c  test_utils.c
tests/codegen_tests/: CMakeLists.txt  llvm_codegen_test.c  llvm_test.c  test_codegen.c
tests/framework/: CMakeLists.txt  test_framework.c  test_framework.h
tests/integration/: CMakeLists.txt  test_component_interactions.c  test_pipeline_integration.c  test_real_world_scenarios.c
tests/parser_tests/: CMakeLists.txt  test_framework.c  test_framework.h  test_parser.c
tests/parser_tests/test_files/: program_test.txt
tests/resources/lexer_test_cases/: lexer_test_suite.baa  whitespace_newlines.baa
tests/resources/parser_tests/: lexical_error_at_start.baa  lexical_error_test.baa  valid_simple.baa
tests/resources/preprocessor_test_cases/: include_test_header.baa  line_number_test.baa  nested_include.baa  preprocessor_test_all.baa
tests/resources/test_files/: simple.txt
tests/scripts/: run_preprocessor_tests.py
tests/unit/: CMakeLists.txt
tests/unit/ast/: CMakeLists.txt  test_ast_binary_expressions.c  test_ast_identifiers.c  test_ast_literals.c  test_ast_program.c  test_ast_types.c  test_control_flow.c
tests/unit/core/: CMakeLists.txt  test_operators.c  test_types.c
tests/unit/lexer/: CMakeLists.txt  test_lexer.c  test_lexer_arabic.c  test_lexer_comments.c  test_lexer_numbers.c  test_lexer_operators.c  test_lexer_strings.c  test_number_formats.c  test_number_parser.c  test_program_files.c  test_tokens.c
tests/unit/parser/: CMakeLists.txt  test_parser.c  test_parser_core.c  test_parser_expressions.c  test_parser_statements.c
tests/unit/preprocessor/: CMakeLists.txt  test_enhanced_error_system.c  test_preprocessor.c  test_preprocessor_advanced_macros.c  test_preprocessor_comprehensive.c  test_preprocessor_conditionals.c  test_preprocessor_directives.c  test_preprocessor_expressions.c  test_preprocessor_line_directive.c  test_preprocessor_macros.c  test_preprocessor_pragma.c  test_preprocessor_pragma_operator.c  test_preprocessor_predefined.c
tests/unit/utils/: CMakeLists.txt  test_utils.c
tools/: baa_ast_tester.c  baa_lexer_tester.c  baa_parser_tester.c  baa_preprocessor_tester.c
